--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                 <div class="bn-cont clearfix">
                     <ul class="bn-left">
                         <li><a href="#">HOME</a></li>
-                        <li><a href="#">CATAGORY</a></li>
+                        <li class="tooltip"> <span class="tooltip-popup orange animated pulse infinite">ON SALE!</span> <a href="#">CATAGORY</a></li>
                         <li><a href="#">BIKES</a></li>
                         <li><a href="#">GEAR</a></li>
-                        <li><a href="#">BLOG</a></li>
+                        <li class="tooltip"> <span class="tooltip-popup blue animated pulse infinite">BEST OFF</span> <a href="#">BLOG</a></li>
                         <li><a href="#">ABOUT</a></li>
                         <li><a href="#">CONTACT</a></li>
                     </ul>
